// Options
option java_package = "com.mrl.update_protocol";
option java_outer_classname = "UpdateProtocol";
// Pos/Quat
message Position {
	required double x = 1;
	required double y = 2;
	required double z = 3;
}
message Quaternion {
	required double x = 1;
	required double y = 2;
	required double z = 3;
	required double w = 4;
}
// Mice
message Wheel {
	required int32 id = 1;
	required string direction = 2;
	required int32 tick = 3;
}
message Button {
	required int32 id = 1;
	required string state = 2;
}
message Mouse {
	required int32 id = 1;
	required bool connected = 2;
	required string name = 3;
	repeated Button buttons = 4;
	repeated Wheel wheels = 5;
}
// Motive
message DataDescription {
	required string name = 1;
	required int32 dd_id = 2;
	required int32 item_id = 3;
	required sint32 parentId = 4;
	required sint32 parentOffsetX = 5;
	required sint32 parentOffsetY = 6;
	required sint32 parentOffsetZ = 7;
}
message LabeledMarker {
	required int32 id = 1;
	required double size = 2;
	required Position position = 3;
}
message RigidBody {
	required int32 id = 1;
	required bool trackingValid = 2;
	required float meanError = 3;
	required Position position = 4;
	required Quaternion quaternion = 5;
	repeated LabeledMarker markers = 6;
}
message Motive {
	required bool duringRecording = 1;
	required bool trackedModelsChanged = 2;
	optional string timecode = 3;
	repeated DataDescription descriptions = 4;
	repeated RigidBody rigid_bodies = 5;
}
// Update(s)
message Update {
	required string id = 1;
	required int32 mod_version = 2;
	required int32 time = 3;
	optional Motive motive = 4;
	repeated Mouse mice = 5;
	repeated Position strokes = 6;
}
message Updates {
	required int32 mod_version = 1;
	repeated Update updates = 2;
}